<resources>
    <string name="app_name">AAAs</string>
    <string name="registerString">New here?  Register Now!</string>
    <string name="loginString">Log in</string>
    <string name="forgetpass">Forget password?</string>
    <string name="sign_up">Sign Up</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="confrm_login">Already have an account. Log in</string>
    <string name="privacyString"><![CDATA[By signing up you confirm that you have read & agree to the our Privacy Policy and Terms & Conditions. © CyberPunk]]></string>
    <string name="copyrightString">© Sheetal Kumar</string>
    <string name="title_activity_home_screen">HomeScreenActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="invitation_title">Firebase Invite</string>
    <string name="invitation_message">Hello From Parent App!</string>
    <string name="invitation_deep_link">link</string>
    <string name="title_activity_flutter">flutter</string>
    <string name="dummytext">Pregnancy: The state of carrying a developing embryo or fetus
        within the female body. This condition can be indicated by positive results on an over-the-counter urine test,
        and confirmed through a blood test, ultrasound, detection of fetal heartbeat, or an X-ray. Pregnancy lasts for
        about nine months, measured from the date of the woman\'s last menstrual period (LMP). It is conventionally divided
        into three trimesters, each roughly three months long  The state of carrying a developing embryo or fetus
        within the female body. This condition can be indicated by positive results on an over-the-counter urine test,
        and confirmed through a blood test, ultrasound, detection of fetal heartbeat, or an X-ray. Pregnancy lasts for
        about nine months, measured from the date of the woman\'s last menstrual period (LMP). It is conventionally divided
        into three trimesters, each roughly three months long  The state of carrying a developing embryo or fetus
        within the female body. This condition can be indicated by positive results on an over-the-counter urine test,
        and confirmed through a blood test, ultrasound, detection of fetal heartbeat, or an X-ray. Pregnancy lasts for
        about nine months, measured from the date of the woman\'s last menstrual period (LMP). \n\n\n It is conventionally divided
        into three trimesters, each roughly three months long  The state of carrying a developing embryo or fetus
        within the female body. This condition can be indicated by positive results on an over-the-counter urine test,
        and confirmed through a blood test, ultrasound, detection of fetal heartbeat, or an X-ray. Pregnancy lasts for
        about nine months, measured from the date of the woman\'s last menstrual period (LMP). It is conventionally divided
        into three trimesters, each roughly three months long  The state of carrying a developing embryo or fetus
        within the female body. This condition can be indicated by positive results on an over-the-counter urine test,
        and confirmed through a blood test, ultrasound, detection of fetal heartbeat, or an X-ray. Pregnancy lasts for
        about nine months, measured from the date of the woman\'s last menstrual period (LMP).</string>
</resources>
